correct sizes and overflows fix

--- a/src/shared/ui/mobileWorkPreview/ui/mobileWorkPreview.scss
+++ b/src/shared/ui/mobileWorkPreview/ui/mobileWorkPreview.scss
@@ -1,5 +1,5 @@
 .mobileWorkPreview{
-    // position: fixed;
+    position: fixed;
     width: 100dvw;
     height: calc(100dvh - 53px);
     bottom: 53px;
